--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: BY Blog
-SEOTitle: 「ならば 答えは1つ!」「あなたに忠誠を誓おう!」
+SEOTitle: ならば 答えは1つ!あなたに忠誠を誓おう!
 header-img: img/post-bg-desk.jpg
 email: qiubaiying@gmail.com
 description: "Every failure is leading towards success."
