--- a/_config.yml
+++ b/_config.yml
@@ -2,12 +2,12 @@
 title: BY Blog
 SEOTitle: ならば 答えは1つ!あなたに忠誠を誓おう!
 header-img: img/post-bg-desk.jpg
-email: qiubaiying@gmail.com
-description: "Every failure is leading towards success."
-keyword: "BY, BY Blog, 柏荧的博客, qiubaiying, 邱柏荧, iOS, Apple, iPhone"
-url: "http://qiubaiying.github.io"          # your host, for absolute URL
+email: kai_ylwd@163.com
+description: "通りすがりの仮面ライダーだ、覚えておけ！"
+keyword: "SenMen,SenMen0410,千面"
+url: "https://senmen0410.github.io/"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
-github_repo: "https://github.com/qiubaiying/qiubaiying.github.io.git" # you code repository
+github_repo: "https://github.com/senmende" # you code repository
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
@@ -18,12 +18,12 @@ sidebar-avatar: /img/about-BY-gentle.jpg      # use absolute URL, seeing it's us
 
 # SNS settings
 RSS: false
-# weibo_username:     qiubaiying
-zhihu_username:     qiubaiying
-github_username:    qiubaiying
-facebook_username:  baiying.qiu.7
+# weibo_username:     
+zhihu_username:     
+github_username:    SenMen0410
+facebook_username:  
 jianshu_username:   e71990ada2fd
-#twitter_username:   qiubaiying
+twitter_username:   qianmian
 
 
 
