--- a/_config.yml
+++ b/_config.yml
@@ -62,11 +62,11 @@ kramdown:
 # Gitalk
 gitalk:
   enable: true    #是否开启Gitalk评论
-  clientID: f2c84e7629bb1446c1a4                            #生成的clientID
-  clientSecret: ca6d6139d1e1b8c43f8b2e19492ddcac8b322d0d    #生成的clientSecret
-  repo: qiubaiying.github.io    #仓库名称
-  owner: qiubaiying    #github用户名
-  admin: qiubaiying
+  clientID: 264f3cfea727ae155ca9                            #生成的clientID
+  clientSecret: dd8373ec7eb5eb919d7c62d99ccfaad71a6adca6    #生成的clientSecret
+  repo: https://github.com/senmende    #仓库名称
+  owner: SenMen0410    #github用户名
+  admin: SenMen0410
   distractionFreeMode: true #是否启用类似FB的阴影遮罩
 
 
