--- a/_config.yml
+++ b/_config.yml
@@ -69,6 +69,28 @@ gitalk:
   admin: SenMen0410
   distractionFreeMode: true #是否启用类似FB的阴影遮罩
 
+<!-- Gitalk 评论 start  -->
+
+<!-- Link Gitalk 的支持文件  -->
+<link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
+<script src="https://unpkg.com/gitalk@latest/dist/gitalk.min.js"></script> 
+<div id="gitalk-container"></div>     <script type="text/javascript">
+    var gitalk = new Gitalk({
+
+    // gitalk的主要参数
+		clientID: 264f3cfea727ae155ca9,
+		clientSecret: dd8373ec7eb5eb919d7c62d99ccfaad71a6adca6,
+		repo: https://github.com/senmende,
+		owner: 'SenMen0410',
+		admin: ['SenMen0410'],
+    distractionFreeMode: true
+		id: 'window.location.pathname',
+    
+    });
+    gitalk.render('gitalk-container');
+</script> 
+<!-- Gitalk end -->
+
 
 # 统计
 
