--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ sidebar-avatar: img/avatar_g.jpg      # use absolute URL, seeing it's used in bo
 
 
 # SNS settings
-RSS: true
-# weibo_username:     
+RSS: false
+weibo_username:     
 zhihu_username:     
 github_username:    SenMen0410
 facebook_username:  
