--- a/_config.yml
+++ b/_config.yml
@@ -101,7 +101,7 @@ service-worker: true
 # Friends
 friends: [
     {
-        title: "WY",
+        title: "SenMen",
         href: "http://zhengwuyang.com"
     },{
         title: "简书·BY",
