--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ github_repo: "https://github.com/senmende" # you code repository
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "通りすがりの仮面ライダーだ、覚えておけ！"
-sidebar-avatar: img/avatar_g.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: img/1539262722470.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
