--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-# Site settings
+﻿# Site settings
 title: MY Blog
 SEOTitle: ならば 答えは1つ!あなたに忠誠を誓おう!
-header-img: img/post-bg-desk.jpg
+header-img: img/home-bg.jpg
 email: kai_ylwd@163.com
 description: "通りすがりの仮面ライダーだ、覚えておけ！"
 keyword: "SenMen,SenMen0410,千面"
